--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <title>Weather Application</title>
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type=“text/css” href="style.css">
 </head>
 <body>
     <div class="container">
