--- a/index.html
+++ b/index.html
@@ -1,22 +1,8 @@
-
 <!DOCTYPE html>
 <html>
-<title>Weather Application</title>
-<head>
-    <link rel="stylesheet" type=“text/css” href="style.css">
-</head>
+<title>CS 355 Home Page</title>
 <body>
-    <div class="container">
-        <h2 id="city">New York City</h2>
-        <div class="middle">
-            <img src="" alt="icon" id="icon">
-            <div class="degrees">
-            <h1 id="temp">19</h1>
-            <span>&#176;</span>
-             </div>
-             <h3 id="desc">Sunny</h3>
-         </div>
-    </div>
-
+<h1>This is my home page for CS 355</h1>
+<a href = "weather.html">Weather</a>
 </body>
 </html>
