--- a/weather.html
+++ b/weather.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type=“text/css” href="style.css" media = "all">
+        <link rel="stylesheet" href="style.css">
     </head>
 <title>Weather Application</title>
 <body>
