--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
+    
 <title>CS 355 Home Page</title>
 <body>
 <h1>This is my home page for CS 355</h1>
 <a href = "weather.html">Weather</a>
+<a href="Resume Website/index.html"> Resume Website </a>
 </body>
 </html>
