--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <body>
 <h1>This is my home page for CS 355</h1>
 <a href = "weather.html">Weather</a>
-<a href="Resume Website/index.html"> Resume Website </a>
+<a href="Resume/index.html"> Resume Website </a>
 </body>
 </html>
+
