--- a/index.html
+++ b/index.html
@@ -2,10 +2,26 @@
 <html>
     
 <title>CS 355 Home Page</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="style.css">
 <body>
-<h1>This is my home page for CS 355</h1>
-<a href = "weather.html">Weather</a>
-<a href="Resume/index.html"> Resume Website </a>
+
+    <div class="navbar">
+        <a href="#">Home</a>
+        <div class="dropdown">
+          <button class="dropbtn">Project 
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a target="_blank" href= "Weather/weather.html">Weather App</a>
+            <a target ="_blank" href="Resume/index.html">Resume Website</a>
+          </div>
+        </div> 
+        <a target="_blank"href="https://www.linkedin.com/in/gursharn-singh-2248a4174/">Linkedln</a>
+        
+      </div>
+
+      <h1>cs355 course dashboard</h1>
 </body>
 </html>
-
