--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       
       <h1>cs355 course dashboard</h1>
 
-      <h2> <a href="https://boilerplate-npm-1.gursharns.repl.co">Node Practice 1</a>"</h2>
+      <h2> <a href="https://boilerplate-npm-1.gursharns.repl.co">Node Practice 1</a></h2>
       <h2><a href="https://boilerplate-express.gursharns.repl.co">Node Practice 2</a></h2>
 </body>
 </html>
