added head-parser and timestamp

--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
 
       <h2> <a href="https://boilerplate-npm-1.gursharns.repl.co">Node Practice 1</a></h2>
       <h2><a href="https://boilerplate-mongomongoose-1.gursharns.repl.co">Mongo DB Practice</a></h2>
+<div>
+       <h2>Timestamp Microservice:
+        <a href="https://boilerplate-project-timestamp-1.gursharns.repl.co"><button class="time-stamp">Time-Stamp</button></a>
+        <a href="https://github.com/Gursharn/Time-Stamp"><button class="time-stamp">Time-Stamp Github Link</button></a>
+       </h2>
+    </div>
 
+    <div>
+      <h2> Head-Parser Microservice:
+       <a href="https://boilerplate-project-headerparser.gursharns.repl.co"><button class="time-stamp">Head-Parser</button></a>
+       <a href="https://github.com/Gursharn/Head-Parser"><button class="time-stamp">Head-Parser Github Link</button></a>
+      </h2>
+   </div>
 </body>
 </html>
