--- a/index.html
+++ b/index.html
@@ -39,5 +39,10 @@
        <a href="https://github.com/Gursharn/Head-Parser"><button class="time-stamp">Head-Parser Github Link</button></a>
       </h2>
    </div>
+    <div>
+      <h2> Excerise Tracker:
+       <a href="https://boilerplate-project-exercisetracker-1.gursharns.repl.co">Head-Parser</button></a>
+      </h2>
+   </div>
 </body>
 </html>
