--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
    </div>
     <div>
       <h2> Excerise Tracker:
-       <a href="https://boilerplate-project-exercisetracker-1.gursharns.repl.co">Head-Parser</button></a>
+       <a href="https://boilerplate-project-exercisetracker-1.gursharns.repl.co">Exercise Tracker</button></a>
       </h2>
    </div>
 </body>
