--- a/index.html
+++ b/index.html
@@ -53,7 +53,14 @@
    <div>
     <h3 class="node"> URL Shortner:
 
-     <a target="_blank" href="https://boilerplate-project-urlshortener-5.gursharns.repl.co" class="time-stamp">Exercise Tracker</button></a>
+     <a target="_blank" href="https://boilerplate-project-urlshortener-5.gursharns.repl.co" class="time-stamp">Url Shortner</button></a>
+    </h3>
+ </div>
+
+ <div>
+    <h3 class="node"> File Metadata Microservice:
+
+     <a target="_blank" href="https://boilerplate-project-filemetadata.gursharns.repl.co" class="time-stamp">File Metadata Microservice</button></a>
     </h3>
  </div>
 </body>
