--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
      
     </h3>
  </div>
+
+ <div>
+    <h3 class="node"> Chalkboard:
+
+     <a target="_blank" href="https://chalk-1.gagandeepsingh9.repl.co/login" class="time-stamp">Chalkboard Project</button></a>
+            <a target="_blank" href="https://github.com/Gursharn/Chalk"><button class="time-stamp">Chalkboard Github Link</button></a>
+
+     
+    </h3>
+ </div>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
