--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         I have experience with Java, C++, NodeJS and MySQL.
       </h2>
     
-      <h3 class="node">My Github link to view my project:</h3> <a target="_blank" href="https://github.com/Gursharn"><button class="time-stamp">Github Link</button></a>
+      <h3 class="node">My Github link to view my projects:</h3> <a target="_blank" href="https://github.com/Gursharn"><button class="time-stamp">Github Link</button></a>
 
 
       <h3 class="node"> Node Practice 1: <a target="_blank" href="https://boilerplate-npm-1.gursharns.repl.co"><button class="time-stamp">Node Practice 1</button></a></h3>
